# backend/internal/server/docs/swagger.json
@@ -20,7 +20,7 @@
                 "responses": {}
             }
         },
-        "/user/{user_id}/words": {
+        "/user/words": {
             "get": {
                 "description": "GetUserWords",
                 "consumes": [
@@ -33,15 +33,6 @@
                     "word"
                 ],
                 "summary": "GetUserWords",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -89,9 +80,6 @@
                     "items": {
                         "$ref": "#/definitions/models.Definition"
                     }
-                },
-                "user_id": {
-                    "type": "string"
                 },
                 "word": {
                     "$ref": "#/definitions/models.Word"
